add downside plank algorithms

--- a/Cube/F2L.resx
+++ b/Cube/F2L.resx
@@ -250,62 +250,7 @@
         J6g7vI0nqDu8jSeoK4LE/wJnoZHJoVUF+QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="f.TrayLocation" type="System.Drawing.Point, System.Drawing">
+  <metadata name="f.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
-  </data>
-  <data name="hoverLogo" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
-        cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
-        b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAPYKAAD2CgAAAAEAAQoPAgAAAPYKAAACUklGRu4KAABXQVZFZm10IDIAAAAC
-        AAIARKwAAEitAAAACAQAIAD0BwcAAAEAAAACAP8AAAAAwABAAPAAAADMATD/iAEY/2ZhY3QEAAAAgwoA
-        AGRhdGGbCgAABgYfABAAGwLsACYC+QBBMEBXVTMQDjJ3RwAOAFQhAP4xVwDcAHUh3atEM8yIiAAREgDt
-        /yNmEQAA3QBDJQDumgASEBLc3gBUIQAA3QBUIwDc3f8RMwDczg8jZBMPD+8hJBEA/rsP8CEjAO26AABV
-        EPDuDwAiAO7uDuAQIkMSIhATMyEB7cqr7v8QM/+I/xBWIRHuzhBEIgDM3f4SMgDduwAQRREA/vARQwD+
-        vA8AAO3tAAAyAf7/M2cSAP3vAEMCD+rPDxAiEf7/InT/uO0ARRDum/8AMxAA7w8QIxAAETMAuJzuEDQR
-        7qoAAFUQAPD+ACIAD+/+APDs3w8AMQDerABUNAD/7RJ2EQDt/xAjAA7c/wAQD6r+8CEh/6r/ECIA7v0A
-        ASAgEg/bvQBCNSAQEUERMnZVIg+q/xAjId3L/zJEEP/NEDQh8NsAMkEAzQ8hZhAA3g8xVREPvP4AIiHv
-        7P8QVCIAD+0AVRDdygBTNCDO7ABUIgDb4B8hABAAABAQMEQhMAEwUyIhAA3sie3b8AAf3gBSVjIRECFm
-        EADu/hFlAO3c/yIyD7z+EmUSAA0CNDLdue8QMu+78A8iEAAAIBIO70JlEf7uEEUQ7t0AQgD9zBBEAA7d
-        IXcSEP4AM3cSD/4AEUUQ/93/ADFEIQAP/jJ3MQDv/QAxNA/cnf4PABAhANqsDyIy7YiqACIQ8A8BZSIi
-        AO8PMjUQ35r/ETIA/8wAM1MRAP8QNVMBAPzwDwD/2/AQQSMhMURUMhIhACERAOzd/xAP3JwPM0QzNEIi
-        I0IkMg/K3v7u7c4QIDIAdEdUEQAAMSVB8O3uEFQBDu0AZzISD+0iRDMQ3cr/AGMA/tkAIWMADw8AEhAP
-        ACABD/wADu3+QVYhIDJmMiEAU0chAP4AMkIREAAPHjR3UwDs/yFFIf/cABAhEBBBMw/c/2JHMe/MAEJV
-        Ef7uEXUjAQ79ATQhAP3dACAQAA7cD3RHMRERMUNEIQAAEEI1If/9EGUQD+1DZyIADhJVIgD98A8QABAh
-        Dw8yd2YAABAzEg/9EUYQ7d9BdxEP7gBDRQDt/wAyIQEQECACQSNEEBARVBIP6OAgEN2L7hAzIAAPMXci
-        IADuEEMPuM0AUyQA6wAyUwDr7xAiD+7/ECHN3CFjEg3tEVYiEAAO/g8PEDEAMUNXZiJEEQD9/xIx7Yjs
-        AAAh/8wAQjQAABAyVAD+7Q8ADqjvDgEQAA8PMlQyEAAQQiMA+83+D/4OEEMgD1JXRwAO8DBVAOy+AFMT
-        APv/EkISDw8PABAAMkMA6/0yd0MAABAiMyMhD/wQVBD8mQ8AVAAP7QAzVQEP698PIBHdif4AETHv2+8Q
-        UiIP7gAgMv/c3dwA/u6b7hB0Ew/63yF0Ef7J/xFCAN3tEEUhAO3wMWQBDw7d/e4PDuy67w4iQhAADgAg
-        VCEA2K4PADER/t0hdkIBDw4TUwDr+98PDw/d7x9SJDEP7Q5UNBDJ3gBREg28AFMVEA8RNCDwDTNVD9u+
-        ADAC7dwQZDMiIkMjESEjViL+2w8RdBEADQA1YyQREAAhNTHw7O8QUgD9ACBVIkNENBEQIVURD+zeAFIj
-        IQAOIndnEQAAEBEzAA/LAAAxIQD/IGUiIQAPABAgAQ7azv4wdSEhMhBDRFYhAA8PIlMA6u4QZBEAIkQ0
-        IhARQzQyIREALxFDMzIPEHVXNjEQEDJ0MwAP7QBmEQDtADNmEgAQACI0ISHw/QBTEhAAEFciETJEMyMg
-        EBIwEh8ODiFkIkYyMzEzQ1UiAA0RMhEL3TF3UQABMTQiEB8hMgAL/zAwD/xxdzQhQyMyIRIQIOy53g8w
-        Ae3ddHckEA8AVSIQAP8PIREAEBBDIiNURzIiDt8gQiL+qA8AMhAP3RB1IiEA7ABCNCD/3ABRRTIRDqvL
-        3e7/AEIBDxB3VhEPq/8AIjPw7PAQdyEzD87t/gAjAA/+JHU0MiMhEf+Z7t0AABEAAA8BVRAA3d273d0P
-        I2U0MiIAESEiId6Z3e7/7t3uEUMR/swzd1cA/uAhUxMRAOze7f8A3brN7RFFIiEAIjJVMSMRD83t///u
-        3Lvu8CFlEREP3hAzAMyo7xBUIhDw/hJTAf3c/g8AACI0VBESIRIjAOzMvNveABAiEAAQQyIQADNTAf3b
-        MndlAP/c//7w/6r//xFDEiI0QzQRAAD//+7M3t0PACIQ78sAIUIiABAydjMiIgAQAP/cvO3wEAD93hB3
-        IhD/3O7/ACBUM1UzVDVDIQDuzP7+3e7dDiJFMkIRIhEhD93cD3VWQxIADgE0ALm+7Q8BABASQ1cjMQEA
-        AA7vzNze7gD+4A9BVzERIQAxEADe7hAQD6z+/w7uDiJ3MjMzZkVTJCEA/90O7u277f4BMzIjITRDVBL+
-        yO8AUgD/3BAzMg/d/zJTAQ4OAncRAP7b/wAQEBEQQ3dEMyIQATEjANqd/gAADqn/AEIDEA4BJFMTABAA
-        AAAO/O797P7+ADABEEF3RzEyEDJTMxEOy/8QMu663hBkEhD//hFnIgAADyFGEADuACFCABAP7yB2MhIP
-        /QFVMgAPADIzAA4yRAD8vQ4AMQEPC+8gd3Uh8A4BMzL//QAA/Jn/ITMPu/4SdjIAAAAyIjIAAP26//8Q
-        /8ztAXQTEA4BRiIA/f8SUwDs/gBVEiH/Dw8SVQAO3AAyVADbDxFkERAAADJFEAAQAP277v4AD9y9/AAi
-        dRERADNGUxMQD/8iRQD+3P8GBicAFgDm/5/+/Pye+3YPIHdHRSARISExIhAPD+7crP0AM2QQEiJGMiIh
-        ACDuyt7/DxAP//4gc0ZkJDIiI1QjEjISEiEPDzM0IQAvd1QTEA8QJCAA2/8fIGQzUxMyFFUjMgEAHw8P
-        I2YRD/0PM1UA/A8AQhAAMnc2EAAQQkQQAAD97tz//v/M3RB0RRAAEFUiEP8PIkMA/Q4SIA/rDw4PIFJD
-        DwohdjH/2+8P/8zvECDdzTJ2UfD9EVYSH/7/EUIBEA8PMkchIf7+MXYhEP4AEHYhAO3c/gAg3ar/DyEz
-        MQAP/QB0EiEO/jN3RzMxAP/+EDMOq9z/DyJCAP7uD1NHIgD9/yFVIQD9zf0AISIO7AB3UxIBEDM3MQAA
-        D0FVIQD+ADFDEQ/r8DBkEAAOEXdVAA//M0QiAOwAM0IRD/8AIBEQRCJBEjNERBIxATEADfwP2v8OczEA
-        /BB3dxAAATE0IADvEDAiAOwAMUFCMnUiIhEQEUMSEPvd/AAO3P8wYgAOQ3dHAQ8OEVUQAP7/IFUhANze
-        D1IkEO3dAFIlIBEAIEMjUxMRNSIyEkISMzQyM1QiNDJEMjNDNEIlURMyJEEUQiIkMjJEMiRRJDIiRCJD
-        IzM1MlMjMzUyUyMzNTJDQiUxQyNCJDNDIzVCMyRSIyRCFEMiJDMzRCNDJEQiNDJDNDJUIjM0MkRCIzQy
-        VBJDFDI0IkM0IlQiIzQyRCJDJEIkMjNEMjRCM0QyNEIzRDI0QjNEMjNEM0MzNUI0QTQyQjNEMjNEMkQy
-        NEIzQzQzQzVCMzNEM0M0M0QzQzQzRDJFMTNCNEE0MkI0QjMzRDJFMTNDMkQyNEIzQzQzQzRDJEMzJUIy
-        NEIjVBIzNCJEMyJUIyM0QiUxM0MyNFMjAAs=
-</value>
-  </data>
+  </metadata>
 </root>
