add single-window view for main and f2l forms, downside plank algorithms part 2, exit button from forms

--- a/Cube/F2L.resx
+++ b/Cube/F2L.resx
@@ -253,4 +253,141 @@
   <metadata name="f.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAAHsBJREFUeF7tnQd4VUXax3HtJCEgBLDr2t21u5/urq6KgmtZRbFQDSUESCO9Qwod
+        VEB6DTV0CEgIgQABpCtKGgmEJpBCdy27ruX93ncyc5l77jnnzk3uTeO+z/N/JHBz7pz5/WfmnXKOTdzh
+        Dne4wx3ucIc73OGOhhJXCSU1afIHofebNLmahH++Rsi/SZNrhfDn60jBTZpcL4Q/3yAU1qTJjaSkm29u
+        KhTRpo2HUJKPjycpqmVLL6Gkm25qJhTTooU3if6eldIdzol4T8+keC8vaED6HdWbF98dNYn6Aj+hWTNb
+        eXvriv+O2wQ1jThPz8ECQHqHDpAfEGBRgVBgoEWFsoKCmIpkBQcr6aCOihVFn539j39YTID30Iffjjsc
+        CWz5gyzwX30VKqMj4WJWBlzMWYfKrNJGobVV2iD++7mkNUwXsrnWr+bKgAt4vSqtkrQSLqxbCeczV1hr
+        7XKLzn2+DLW0SmtIS+Dc6iqdXTwHysJDrUyA9+LHb8sdKoGtJlEL/1LuBriQmwVn1y6Fs59jRa9ZjFoE
+        Z1ejMhbCmVUL4MxK1Ir5qHlQuWwuag5ULk2DisWzUDOhYtEMqEifDhULp0H5gqlQPn8KlM+bXKU5E6Fs
+        zgQoS/sMymaPh7JZqJnj4PTMsXB6xqdwevoncHrqGDg1ZTScmjwKNRJOTRyBGg4nJwyDk58NhZPjh+B3
+        zISzS+fB6TC3CaoVWFEJFvjY7Vvgb8mCyiWzoZJgYiVXpCPMhTow506qgjkbQRLEWRqI0z62BTlpBJzU
+        gDw5LhW+HZsC336aBN9+MhhOfDwIToxJhBOjE+DEqHg4MTIOjo+IRcXA8eHRcHxYFBwbGslEJju7ZC6U
+        kQleeMFiAjR2X36b7tALGf5ChF8R5SB8Ap+GrbiG8KvAJzsOf0gEHEsNZ6JynV2cxnqCNMkEeI84I3WH
+        TWDriK8WfLnV1wS+VauvJvyUMDiWHApHkwYyUdnOLLI1Ad5rP37b7qDAVhFngd++PYefbQhft8uvDnzd
+        Lt9B+KLVW8EPgaODg+HooGBWvjOLZrPhIO3FF90m0AZWRKwMv9IIvtl47wh80/FeEb62y9eFHwRHEgOZ
+        KLk8kz7LxgRo/P68Gq7MkOEveOWVy/Ax2yf4SsmeCnylZM8efIPx3gx+QgAciR/ARDOLM+kz9XqCAbw6
+        rqxA98dYwY+MuNzyVTN9M/gKyZ5d+HKrry78uP5QGusPpTH+OK0cC2cWzGAmmPPSS1euCfCGo2X4FQR/
+        y/qaw1dJ9uzBV0n2VOAj+COx/Tj8vlAa7QelUX6sjJULptuYABtEAK+exh14s1EC/vwaw1dM9uzAV0r2
+        VOBLrd4Wfh84HNmb6RSWs3L+NK0JIM7DI5BXU+MMGf68l1+ugr95PVykMV8VvmqyZxe+A5m+GXydLt8Q
+        fkQvOBzeEw6H+bJyVs6bykwwVzJBfLNmQby6GlfEenlFVhu+arJnB75asqcC33i8V4F/OPQjOBTaA05O
+        GgmVc6ZUmaBdu8ZrgjgvrwiH4asme/bgqyR7KvAVkj0V+AT+0MDucCikGxwK7srKWTlnso0J4po1C+bV
+        17Ajwcsr3AIfb9AMvnKyZw++SrKnAl8l2VOBL7V6GX5JUBcoCezMylqRhvdLJsAGIuoLFcKrsWGGLvxN
+        WQh//WX4SsmeAnyFZE8FvlKypwJfp8vXg18S8CGUDPiAlbdi9kQoDx1oZQLsPQfy6mxYgQUPEzdBSY4M
+        XynZU4GvlOwpwFdJ9lTgm4z3ZvBLBrwPxf3fw/ImQ8WsCVAeHsqGygZrAix0qBX8iHC4iPBpqldj+ArJ
+        ngp8tWRPAb5CsqcCv7hfJyj2f5eVt2LmZzgcDGTTZFGPVKe8eut3kFtl+OXOgK+S7KnAV0n2VOArJHvV
+        gX/QryMc7PM2K2/FjPE2JqBelVdz/QxnwldK9lTga7r8Ywj/q9R42J6cCDlJgyE3KRF2D4qGkmQ78FWS
+        verAR/DFfd+xwD/Y+y042OtfcBzLXD59nI0JKK/i1V2/AgsXIgpJmx3l4WHs/N4FR8Z8lWRPBb7BeF88
+        LA42pSTBxiGpcGDZMjiydSsUrFkDW0aPhqy4ONifGG4FXynZswPfAl6CL7d6PfhFvd6Eop5vwPFRcWiC
+        sfXfBDRnNYRPZ/FM4Csleyrw7SR7R4fHQg7C3z1jBvznu+9Ajl9/+QWK1q6Fz6OjoSAB4atm+kbwta2e
+        pNPlm8Ev8n0dij56jQ1V5dM+hTIyQfv2FhNgbxvBq79ug1atLPBfeIHDz6zK9o3gqyR7KvAVkj0x5u9O
+        TYBNI0fA/376iWO3jb1paZAdEwWlCY7Dd3S8V4Ff1OOfUNj9VTiGeUr51E+qegLJBLS6yjHUTTgEXyXZ
+        U4Gvkuxp4FMr2ojj/fGdOzlq/fj+zBlYHR4OBXGKY341kz0V+AS+sFsHKOzaHvUKJqnhUDblY2aCBR06
+        WEyAiuI4ajdo50oX/tZsCb79ZE8FvlKyZwL/8LBoyEpMhAsnTnDUxpEZGwP7otEARvCrm+ypwJdavQy/
+        oMvLUNC5HRzFJLVs8ui6NwHtXcvwy2T4dPZeMdM3h+9Apm8Cn6Z5B1OjIDM+Hn48f55jNo6NqSmwKwoN
+        IMNXSPaqDV+ny9eDX/DhS1DwwYtwNHmgrgnojAXH49qg0yv4hfTcG3vwgcGnp3FYtl8z+ErJnhJ86zn+
+        wZRIyMQsX8UAG1KSYVdkgFqyV134JuO9GfyC91+A/Pf+wWYoZRNHMhMsfPVViwnolBXH5JpA+P2cDl8l
+        2VOBL7d6CT4t8BxMjoC1sbFqBkhKgp3h/Z0PXyHZswu/0/OQ/+5zqL+zWUqtmwC/oJy+ZNbzz9cMvkqy
+        pwJfr8vXwKfVvaKkcFgbE6NkgOzBg2FnGHb/zoCvkOzZhc/B573zNwaeRH/O6/hXlqienjCcmWA+30rG
+        RlrMcTk/hAH29uoFF1akOzjm20/2VODrdfm0umcEn1b3igaHsTm+mgEGwc5QfzX4BF4LXyXZ04FP0PPe
+        fha+6fAofPXcPbDv6VtgzyMtYNd9N8DOO65CNbmsO/8AO+++Bnb98Vq83ptwKjYYtnfuXLsGuLhmOZzL
+        XG4OXynZU4Fv2+UfGpkAe4YkQu6QZFg/aBBsSk6CHUlxUJJqu65fNCgU1kRGKhlg/aBE2DGwryH84qCu
+        sH9AV9jTryvkBwj4CsmeDnxq3V+3ewj2PtaqCqoMWVEHXn8STuKspVYMEOflVcYM0LMnGmAZnF27zBa+
+        QrKnAt9svC8ckQAbU1Lgi4kToDg7G8ry8qA0Nxe+mDABshISYP9gNAHCF8u6hQkhsCYiQs0AiQmwI8TP
+        Gj6BD+4Gm/x9YUnv3rAI73+Rry+kf/QRrOzdE/b6fQBF/mrwqQvf//y9sOfhZrpAHZXWAJgDlHBczg9h
+        gD1kgNVL2aPaDL5KsqcC32y85/ALhidCdnIyFGVmwm+//caxVQX9XLJxIxvvC7HVizX9wvhgtsDz47lz
+        /JPGQQbaEYzjv9TqixB+hr8frAwMhNKtW+H7s2fhl59/hnNHjsDOyZNhYbdusN63szF8bPHftH8Edj/o
+        qQuxJqozA1zIqHpGv8bwVZI9Dr+EtfxkKMnJ4bj0g5Z0N8bFWHbzCuODYHVYmJIB1uF08YvAXlbj/Qb/
+        npAxcKDNHoKIE3v2MBPk+naygk/j+/4XH4Bd916vC88ZshigSxfXGwC/4LSNAaoDXyHZ08I/MjIeNqem
+        wP70dPj999951evH+ePH2Zh/KLFqU4eWdjNCQ+EHJQPEwvaAnhb4eYFdYTHmPOUFBfwT+kE9z3xshbt9
+        O7JM/qu/3w0777paF5ozpTUA5gCHOC7nh5UBVi1mb+dQga+e7OnDP4bZ/rahyTjGf8a6XnvxK36GxvwD
+        cWiAhAAoiA1gLVjFALQUvD3A15Lp7+rXDZb368f/1Tx2Tp0K4598ArJvcz14oW9ee6LuDHAmI90YvmKy
+        Zw8+TfP20U7e8GHw08WLvKrN49/l5WzML+SbOgUxA2BVcLCaAWKiYfsAHP/5HD+3bzdYFxvL/9U8aFt5
+        evv2MNrHG3bcrg/M2RIG+KJrVzEEHOa4nB+YA5yyGGAlvZsHDSDDV0327MEn8HyOXzo8FrKTkuDU/v28
+        mu3HkW3bYG1kBJTyDZ38qH6wMihIzQDR0bCtfw/LAs9e/84s4zfbRpbjAg4/ic2bw9I21+gCc7bqxAC7
+        sULIAGdWLdTt8qsD36rVS6t7u1ITYfv4cTYZv1H8gBn6ungcMqKCLRs6+ZH+LINXMcDaqCjY1q+7ZYGn
+        cMAHsAine8d27eKfsB+06DS0ZQvYXgu9QK0aAL/gpMUAK9LhzMr5NYSv0+VL8EuGxrJt3MqSEl615vHz
+        jz+y414bIkPhsLSblx/RF1YEBDBz2IvPsefY5t/NaoEnu1cXlgieP3aMf8o8yGjJrVvD/NbX6kJzprQG
+        wByglONyflgZYPlC9jo2R+GbjvcSfFra3Z6SCLunT+fVah7UQ+yYNBGyIsKhJMZ6Hz8v3E/dAPj7W/2w
+        +5dW9w72fRfW+naBpX36wI8XLvBPmsfm0aMhqUVz2ObiXuCbfz5eNwY4TwZYPlcNvkqyp4Ffyg9xVB48
+        yKvUPPJXrYI14WFQGCNeyHB5OzcvvA8sHzBAyQB0ja19utgs7eZ36wBj77sblvXtyz9pHv/9/nsY3PIm
+        WN7WtbmAMMCObt1cbwDMAb61GGDZAqgkAxjBV0n2DODTps7XKTGY/A2GX//3P16lxnHu6FE2zdsfNcAG
+        Pm3q5IX1hmX9+qkZICwMcnt3toJ/4I2n2ObL6puvZpV8XDEfmPteJ5jo46ELzlnSGgBzgCMcl/PDYgBM
+        is4vnc/exGkFXyHZU4FPu3nbBsXBl/Pn86o0j62ffAI5ESG28PmGzoGBPWGZv7+SAVaHhkJurw8ZfFrV
+        ++q5P1pV+AQEOv7pp+C3X3/lv2EcX86bB4NxGPjChcNA3RpgaZp+l18d+NJW7tHUCMjCTF5l6kcbQatC
+        QqAAp3oMvs4+/oEQX1iKXbeaAQbClp4fsI2bvY+2tKnwzbddxaDumDSJ/4ZxUDJIbxVfhT2H9jrOks4Q
+        cJTjcn6gu07Ql+wiAyyZx97kVRP4cquX9/HzkiLYEa6fFebee2bOhE1hQVZdvnYr90DwR7DEz0/JABkD
+        QyC74yuw+74bdSucRNl9Sts2SsPT1HYvwbRWrtsL+ObVx5gBdnbvXosG6NGjygCLZzkOX6fL1x7i2Dco
+        AnKGDuVVaBwEgDZ59oVh128AnzZ1ioK7wxLM4CuLi/lv6gfNJKa0awdL2ppP37ZgL0D1QAtO9oL2IMa3
+        ds7Wr55q1QB48eMWAyyeC/QWbiX4JuO93gmeXQkR8MVnn/EqNA7aoFkZHAQlkcbwxabOSv++UJiZyX9T
+        P8ggdH/rb7V/OGNU6xbsIIq9oOng6Da2Q4mzpDUANtJjHJfzw8oAi+YAPfNnCF8h2dODTyd4tsdFsgTK
+        XhzKyYF1YSF24dOy7ua+3dmmjtGhENphnPbKyzBGcR1/asvrYdYbr/PfNg5KZFNwOqh3DWdIGICY1L4B
+        0mdYw1dJ9uzAp1M8m+OjIX/1al6FxpG3ciVsCA3Uh89388Sa/sGAzrCqT0+21Evr9XL8dOECpGMLSvRu
+        BtkKrZ80x+c6GPfkE/wKxnF40yYGxlUzgVo1AF1cGOBcehoaYLpSsqcCX34qNzs2Gkq3bOFVaBx7Zs2C
+        TUF9LfDlVq93Yjev3/uwulcPSMfy0wZTLk4f53bqBKm33AxDWjZn83y9StbT4jbXwrA7buclMY6KoiIG
+        ZhPmDXrXqam0BqBGynE5P7QGKF8wrWbwpVYvP49PBji8eTOvQuMgA+QE+Nl0+XrwxdLuQf9OsKNXJ0h/
+        6kH4pHVzmNTqRliIWf3W2/Qr2EhkgOF33clLYhwVhYWNzwCUcJxbOJudB3QYvk6XL8OnEzybYsIhb9Uq
+        XoXGcWD5csgK7K8Mn1b36HAmO4WrU5mOiIaACc8+w0tiHHRSiOrMZUNAh0e1Q8AJjsv5ge46amWA+VPU
+        4JuM91r4dIInNzIE9s6ezavQOEo2bIA1AWgARfj0oIXZ/N4RURI49733eEmMY9/cuZDayoVJoDDARx/V
+        sgEWzGIHQo3h20/29ODTCZ4vIoIgd8wYXoXGUZafD0v9/NipXXvw6excdc/e64lNAwcP5iUxjk0jR+I0
+        sJEYAC9+hL6Elh3PLZjJDGAFX2711YRPhzh2RwxgS8H2go5gLe/fH3b2724Mv+87VQc0dSqvutp4a9VC
+        0Indu3lJjIOWqV26EMQNQMvzVCZarue4nB9WBpiPBpg7SS3Zswdf8zKG/XSCJyiIbanaC1qTX+ffUxc+
+        G+8fcX7rm9f6OpwB3GH3dDLF5Oefh+muXAquOwPMYP8rlOrCt2r1mpcxHIrygww0gMq2a9mBA+xJnW/6
+        owEQvmW8/+BF/lydfsVVV3TMa0jLFpClsAr474oKevGzQ9NLR0UPnJyMQQP4+rreAJgDlNKX0OmTc/PQ
+        AGloAEfg63X5Bm/iyAkZADsmT+ZVaR45Q4ZAZp8eFvh0TMqZ470sthF0c1u2eGQv9mAim3STi7eDNQZA
+        neS4nB/WBpjOTgTbg2863hu9hiWyN+wd2Icd5FR5DuBsaSksxMR0F87vv/rbXboV5Qzl4NiffFML2Dp2
+        LP9m80h76y2Y1Kqp7rWcpTozwNm5ZIDx+vBVkj0T+LS0WxzeE5b181c+Dr53zhwYcdddsP4W17R8Ots3
+        0qc5TH3pJSVT/ufSJRjUogWscPWRMNsh4BTH5fzAHOCwxQBzpsHpWWgAAV8l2VOBL63pZwf0hQ0pKbxK
+        zYO2cud07AhDWzZnWbpeZVVXNO6P9/GEkffey94kphIbUlOxt2ju8qPhdWuAmWPVM30T+Ea7eXnBPdg8
+        /9t9+3i1mgc9vElZN1X8505KvGgJl570GXbnHXafDxTxfWUlDG7Vii0x613Tmfr6lT8zA9DDOi43AA4B
+        hywGSJvKjoRXG76myzfays3x94W1UZFKZ/Aofvnvf5lpErybwVyf66rdAmlLmE70pmCP8tmzz8ClU6f4
+        N9gPOgQyrJVrkz8hrQFQpzku54cwAD2IeDZtChrgE4fgG433RvBpda8gsAss6Y2fUdgckoNeCTvk1lsh
+        Fads6W3UN3sI2qq2V2Orbw6Jzb3ZU8aqj4VRnMOElH7P1cfBherOALPRANPRAPbg20n2zOCL1b0tfl1h
+        ae/ecPHbb3k1qwUNCZRDDG7Zkh3O/NSnGSzAbjkDhwc69UNHuzZgvrAGf17S5hqYiBk7Hfike1zUowec
+        P3qUX0kt6IganQFUPVTiDNWqATAHKLE2wMf68FWSPUX4tLjzzRtPw7jbfODTxx41fEmDWdCKYn5GBnuy
+        Z9idd4qKslJymzZs2kZbzN+Vl/PfdCzo4RPKP2i6qAfLFdLJAco4LueHxQCdO6MBJrOHQizwFZI9Ffjy
+        mj69T0e8SycXWytl+ARJNR8wCmqpF0+ehFNff81e80LPFNY06P1E1MtQb6KF5ErVnQFmTYJTU0crZ/qm
+        8KVWTw9j0E3pbdtSt01dND19W5+ieP16tuRLuYa2zK6WMAC9uIvYoMo5LucH5gDFwgBnZk6EU1NGVRu+
+        TbLX5WX48pnb7S7hrsTkiloadbcqCzKuDjq8Su8DmO7jnHMGjspigF69as8AW9EAlSNTmQFKEawyfNHq
+        ETq9OYueufvy2TscPqRB3Wwy9gRT27VTetjDFUELT5mxsazSabqpV05Xa8+fvFmdlkUEws5a6QG8vAro
+        Sz5++GEoxRZ4KjqQddv0+rO9j/vA/hfuh7y3nmEnb/Lp9aYd/woH3vwL25yhFSt6KeK+J9uAM16eRKt9
+        I3CuPer++6A8P59jqZ2gV9XMxlxkEE73qEfSK5+rJeCfjgyEov79YcQ99zADUCPluJwfsV5ez2AecMli
+        ggDJBE46auWItuJUa1wrT0j09mZPCKku01Y3KHncOWUKDLntVpaQumrfwZ4oMRbwDxL8e++1tH40wIMc
+        l2sCk53/q08mECt2tPKW5OMDm0aMgJ9/+IEjc07QwY+8FStg9EMPsiSUDoS6+sUPRjKBX5Ho6fkQx+Ta
+        MDXB/a7d/jQSreDR2nsKzsOH3n4bZGCPQKuHdGysukFr/2SosY8/zpaWp/vcwBaP9L6/NlQv4IuIbdbs
+        L9jdXKQCjHnoIThMJogKZBl9XZmARC2TjmyN8ala0Utp25YtANER8pNffgnflZXpriPQW0Qpl6ApHb2Z
+        ZMyDD7LfH9qqBcxodb3TdxgdFYOPCTTBL65r+CKwJ3i6PppAiJ7lX4Rz83E+XuyxL15hbBpJD3XQix5G
+        3XcfDLqpheXfSLQPQN18XY3xWhnBx6S8Euv/YY6jbqK+m0CIcgXqvrMQKu0F0JM9NH1Lx2GDDm1k4t/T
+        1m9t7OA5ot0PeV2GjzOvkWjYegNfRKy391OyCQ4JE+B8vz6ZoKHJDH6ih8efePXXjyATYGJ4wW0C58ga
+        fn8LfNSZegdfRLy395PCBKMxibIywQOufVtWY5IZ/DgPjz/z6q6f4TZBzaSFP+r++xsOfBExTZs+gTnB
+        ebcJHBPBp02yUwi/RIKPY/5Z7PYf4dXbMMLKBA88cNkEA7u7TaAjC3ysowYPX0R806aPG5rABf//nIYq
+        qgsZPtWVgI/d/qO8OhtmkAkwJzhnMQHeoNsElyXDp7oR8KnOGjx8EVoTkMvZDeONX8kmsIKPvaMMH4fQ
+        x3j1NY6gG7IxASY7zAQ4/ulVUGMWg4+94BUBXwTdGI1rdKOU5JAJaLpzpZnADD71lry6GmfQuCabgOa6
+        V5IJaAZkBZ/vOrJkubHDF2FkAloAacwmMINP02ZePVdG0NxWmICWOhu7CRj8kG5u+HKQCbASzlw2wYBG
+        aQItfNoso3vGMf8CLZ3z6rgyg9a3jUxAByH0KrQhSYZPZyXc8HVCNgGddqFTL43BBLQNbgSfts/57buD
+        gva4MSeotDFBmG+DNIEFfrQ1fBzzL7rhG4TWBHTy1WKCP3nrVnR9lAyfTkzL8OkIHb9dd+gFVtLDDdkE
+        Wvh0bN4N38EgE2ClVeiZIP/d56rU6Xl9vfcPGxW8/4KxPnjRVh++ZK7O7WzV5WUmNs/XgU/H6PntuUMl
+        6Ky7bAJ6/q08PBDK0AhOVYRzRWWk5yYFfEz4LrnhVzOsTHDPPZDVqRNkv/surH/nHVhP/5WUhX8na13H
+        jpf19ttMmbLeestKa//1L/hc6M03LVoj9MYbFq0mvf66jTJee41JyvYv0VNU/HbcoYmruP7AdTXXNZKu
+        DfTweCTW05OZoCEJp7aXQj09/073wCXfl7hXce+iLhpFGEEVFXEd6nquG7hu5GrK5cHlSfJt2vSpGE/P
+        zTEeHttQ2/l/maI9PLYK4c+5WkV7em6J4sI/bybhnzcJ4c85kjaS8O83COHP2UL483oS/jlLCH9eJ4Tf
+        t1aov4dHOyy7l7gHlLgncY/inkUdiDqh+pFNo2eWOg/hWD3IdAMCshauDJYqh9SMyxvVnKsF6iaullyt
+        uHwkteZqI6mtpJsNdIuJ9D5Pkq8rf58og1wuUVZRdnEvdF/iHul+xb2LutAaRTaJMIcwiNYcgolLQsAW
+        wGXYwrkCtnC4HmgBmSpCQJYBy2BloAICAbqV6zau27nu4LqT6y5Jd5vojzp/J0u+jri2+C7x3aIsomyy
+        kWTDyEbRGkTUiWwOrTFE3cqmEMaQTSFY1cgQwlGq0AVwAd0MuB5sPdBawDJYgkPwSPeg7kXdx3U/1wNc
+        9NIEIXqS1p7kz4triGuK76Dvo+8VZZDNIkwiG8TIGHqmMDOEqGO5l7BnBsFSOQR4I/gCvBa+DF6GrwJe
+        hi7Ay9BFi9QC14ImgPTQJD0+RQ9SkOhYNR2wpKNWdOiCRFuwWol/o8/R5+n3xDXoenRdYRDZGFpDiLJq
+        zSDuTTaDihGECbRGkE0gG6HGPYJwjJkB9Fo/FUyv9csGECZQafnCALIJhAH0TCBarWwCYQSCKYwgzKCV
+        +DfxWQFeC18YQAtfNoCArzWAvZ5A1JGeAQR8PQMIJma9gMMhm8DRnsDICPZ6A3s9glGvoGcMYQ4h0WpV
+        JP+euJYWtIAtAxdlNGvxWugCvIDuCHgB36ngjUL0DFoz2DOEMIUwhJkphDGocoQx9HoKYRCtSYQECGEY
+        I8ktVU/ydeTry3AFYAFZgBZlF/ciQJvBloGLujMDLqC7BLhqyD2FtpcwMoaeObQG0ZpEGEVrFiFR0UIC
+        gFaiFepJ7/Mk7bXl75WhymBJAq4WsB5kI9ACthZ0ncB2NERBqdDCJHpGoZvVGkVIaxhhGiFRoUKiomUJ
+        CI5I7zra75LLIZdPBiokgxVwBVi525YBNwjIzg755rXGkQ0kRBUoRBUqJFqPbDBVyb9Lkq8rf59cDrl8
+        otxXPEx3uMMd7nCHO9zhDne4wx31J5o0+X9qFcZd3uLQ+gAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
